--- a/index.html
+++ b/index.html
@@ -7,5 +7,7 @@
         <img src="/img/helloworld.png"/>
         <hr/>
         <p>some more text</p>
+        <h2>Second heading</h2>
+        <p>even more text</p>
     </body>
 </html>
